[gd_scene load_steps=8 format=2]

[ext_resource path="res://entity/ball/bomb/png/bomb.png" type="Texture" id=1]
[ext_resource path="res://entity/ball/bomb/Ball_Bomb.gd" type="Script" id=2]
[ext_resource path="res://fx/explosion/Explosion FX.tscn" type="PackedScene" id=3]
[ext_resource path="res://entity/ball/bomb/wav/ZSG - Ball Bomb.wav" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
bounce = 0.9

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 160.0

[node name="Ball_Bomb" type="RigidBody2D" groups=[
"Ball",
"Multi",
]]
collision_layer = 4
collision_mask = 29
mass = 0.2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
pickup_sound = ExtResource( 4 )
explosion_fx = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Explosion_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Ball_Bomb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Explosion_Timer" to="." method="_on_Explosion_Timer_timeout"]
